<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SweetyPlay</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="again">Again</string>


    <!--ERROR-->
    <string name="failed">Failed, please try again</string>
    <string name="phone_number_is_not_legal">Phone number is not legal</string>
    <string name="password_is_not_legal">Password is not legal</string>
    <string name="passwords_do_not_match">Passwords do not match</string>

    <!--Indicator-->
    <string name="input_name">Your Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country_area">Country/Area (Optional)</string>
    <string name="email">E-mail</string>
    <string name="play_button">PLAY</string>
    <string name="bubble_button">BUBBLE</string>
    <string name="invite_button">INVITE</string>
    <string name="talk_button">TALK</string>
    <string name="join_button">JOIN</string>
    <string name="default_location">DETAILEDLOCATION</string>
    <string name="post_button">POST</string>
    <string name="play_title">Play Title</string>
    <string name="search_button">搜索</string>
    <string name="add_friend_textview">添加好友</string>

    <!--hint-->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="country_area_hint">Please input your country or Area</string>
    <string name="email_hint">Please input your E-mail</string>
    <string name="play_description_empty">暂无活动介绍</string>
    <string name="add_friend">手机号/昵称</string>

    <!--tab-->
    <string name="fragment_one">页面一</string>
    <string name="fragment_two">页面二</string>
    <string name="fragment_three">页面三</string>

    <!--menu-->
    <string name="change_layout">Change Layout</string>


    <!--from 环信-->
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>

    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>

    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>

</resources>
