<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EAEAEA">


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/friendspage_photo"
                android:src="@drawable/default_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></ImageView>

        <TextView
                android:id="@+id/friendspage_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/friendspage_photo"
                android:layout_marginLeft="20dp"
                android:text="用户名"
                android:textSize="23sp"
                />

        <TextView
                android:id="@+id/friendspage_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/friendspage_name"
                android:layout_toRightOf="@id/friendspage_photo"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="0.5km"/>

        <ImageView
                android:id="@+id/friendspage_state"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/friendspage_name"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/account_current"
                android:layout_toRightOf="@id/friendspage_distance"/>

        <Button
                android:id="@+id/friendspage_bubble_button"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/bubble_button"
                android:layout_toRightOf="@id/friendspage_photo"
                android:layout_below="@id/friendspage_distance"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                />

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/friendspage_album"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="12dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="个人相册"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/default_photo"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/default_photo"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/default_photo"/>

    </LinearLayout>

    <Button
            android:id="@+id/friendspage_invite_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/invite_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape"
            />

    <Button
            android:id="@+id/friendspage_talk_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/talk_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape"
            />
</LinearLayout>
