<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EAEAEA">

    <include layout="@layout/title_bar_with_back_button"/>

    <LinearLayout
            style="@style/default_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

            <ImageView
                    android:id="@+id/play_detail_layout_play_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/default_photo"
                    android:scaleType="fitCenter"/>

            <Button
                    android:id="@+id/play_detail_layout_join_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/play_detail_layout_play_photo"
                    android:background="@drawable/shape"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:text="@string/join_button"
                    android:textSize="@dimen/common_text_size_large"

                    />
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <TextView
                    android:id="@+id/play_detail_layout_joiner_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/common_text_size_small"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/joiners_number"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/common_text_size_small"
                    />

            <freeflow.core.FreeFlowContainer
                    android:id="@+id/play_detail_layout_joiner_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="@dimen/tiny_margin"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:id="@+id/play_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/time"
                    />

            <TextView
                    android:id="@+id/play_detail_layout_play_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_gravity="center_vertical"
                    android:text="@string/default_location"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/tiny_margin"
                android:layout_marginBottom="@dimen/tiny_margin"
                >
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/map"
                    />

            <TextView
                    android:id="@+id/play_detail_layout_play_location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:singleLine="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/default_location"/>
        </LinearLayout>

        <TextView
                android:id="@+id/play_detail_layout_play_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:text="@string/play_description_empty"
                android:textSize="@dimen/common_text_size_small"
                />
    </LinearLayout>

</LinearLayout>
